baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputTestcaseImage_render_prompt@InputTestcaseImage.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputTestcaseImage.baml
---
fixture = 'InputTestcaseImage.baml'
function = 'FnInputTestcaseImage'

[prompt]
type = 'Chat'

[[prompt.messages]]
role = 'user'

[[prompt.messages.content]]
type = 'Text'
text = 'Describe this in 4 words. One word must be the color'
