baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__NoArgsCompletion_render_prompt@NoArgsCompletion.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/NoArgsCompletion.baml
---
fixture = 'NoArgsCompletion.baml'
function = 'FnNoArgsCompletion'

[prompt]
type = 'Completion'
text = 'Say hello to the world.'
