baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputBoolean_render_prompt@OutputBoolean.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputBoolean.baml
---
fixture = 'OutputBoolean.baml'
function = 'FnOutputBoolean'

[prompt]
type = 'Completion'
text = 'Return "true"'
