baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputClassDynamic_render_prompt@OutputClassDynamic.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputClassDynamic.baml
---
fixture = 'OutputClassDynamic.baml'
function = 'FnOutputClassDynamic'

[prompt]
type = 'Chat'

[[prompt.messages]]
role = 'system'

[[prompt.messages.content]]
type = 'Text'
text = '''
You are an expert extraction algorithm. Only extract relevant information from the text. If you do not know the value of an attribute asked to extract, return null for the attribute's value.


{
  hair_color: 'RED' or 'BLUE' or 'GREEN' or 'YELLOW' or 'BLACK' or 'WHITE'?
  name: string?
}[]'''
