baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputClassList_render_prompt@OutputClassList.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputClassList.baml
---
fixture = 'OutputClassList.baml'
function = 'FnOutputClassList'

[prompt]
type = 'Completion'
text = '''
Return a JSON array that follows this schema:
{
  prop1: string
  prop2: int
}[]

JSON:'''
