baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputClassNested_render_prompt@OutputClassNested.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputClassNested.baml
---
fixture: OutputClassNested.baml
function: FnOutputClassNested
prompt:
  type: Completion
  text: "Return a made up json blob that matches this schema:\nAnswer in JSON using this schema:\n{\n  prop1: string,\n  prop2: {\n    prop1: string,\n    prop2: string,\n    inner: {\n        prop2: int,\n        prop3: float,\n      },\n  },\n}\n---\n\nJSON:"
