baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputClassWithEnum_render_prompt@OutputClassWithEnum.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputClassWithEnum.baml
---
fixture = 'OutputClassWithEnum.baml'
function = 'FnOutputClassWithEnum'

[prompt]
type = 'Completion'
text = '''
Return a made up json blob that matches this schema:
{
  prop2: 'ONE' or 'TWO'
  prop1: string
}
---

JSON:'''
