baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputClass_render_prompt@OutputClass.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputClass.baml
---
fixture = 'OutputClass.baml'
function = 'FnOutputClass'

[prompt]
type = 'Completion'
text = '''
Return a JSON blob with this schema:
{
  prop2: int
  prop1: string
}

For the prop2, always return a 540

JSON:'''
