baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputEnumList_render_prompt@OutputEnumList.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputEnumList.baml
---
fixture: OutputEnumList.baml
function: FnOutputEnumList
prompt:
  type: Completion
  text: "Print out two of these values randomly selected from the list below in a json array.\n\nAnswer with a JSON Array using this schema:\n'ONE' or 'TWO' or 'THREE'[]\n\nAnswer:"
